[package]
name = "mqtt_topic_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = [ "derive"] }
anyhow = "1.0.55"
serde_json = "1.0.79"
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "io-util" ]}
async-trait = "0.1.52"
